--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="SupplierComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
-            <Button Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+            <Button Click="AddSupplierButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
         </Grid>
 
         <Label Content="Товар:" />
