--- a/Modals/AddMaterialModal.xaml
+++ b/Modals/AddMaterialModal.xaml
@@ -6,26 +6,28 @@
         mc:Ignorable="d"
         Title="AddMaterialModal" Height="300" Width="300">
     <StackPanel>
-        <Label Content="Добавление материала" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+        <Label Content="Добавление материала" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
 
         <!-- Применение стиля к Label -->
-        <Label Content="Название:" Margin="0 10 0 0"/>
+        <Label Content="Название:" Margin="0 10 0 0" />
 
         <!-- Применение стиля к TextBox -->
-        <TextBox x:Name="MaterialNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}"/>
+        <TextBox x:Name="MaterialNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}" />
 
         <!-- Применение стиля к Label -->
-        <Label Content="Цена:" Margin="0 10 0 0"/>
+        <Label Content="Цена:" Margin="0 10 0 0" />
 
         <!-- Применение стиля к TextBox -->
-        <TextBox x:Name="MaterialPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" Style="{StaticResource TextBoxStyle}"/>
+        <TextBox x:Name="MaterialPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"
+                 Style="{StaticResource TextBoxStyle}" />
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <!-- Применение стиля к Button -->
             <Button Content="Добавить" Click="AddButton_Click" Style="{StaticResource ButtonStyle}" />
 
             <!-- Применение стиля к Button -->
-            <Button Content="Отмена" HorizontalAlignment="Center" Click="CancelButton_Click" Style="{StaticResource ButtonStyle}"/>
+            <Button Content="Отмена" HorizontalAlignment="Center" Click="CancelButton_Click"
+                    Style="{StaticResource ButtonStyle}" />
         </StackPanel>
     </StackPanel>
 </Window>
