--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:MedicalFurnitureAccounting.Modals"
         mc:Ignorable="d"
         Title="AddProductModal" Height="550" Width="300">
     <StackPanel>
@@ -20,7 +19,8 @@
                         <ColumnDefinition Width="30" />
                     </Grid.ColumnDefinitions>
                     <ComboBox x:Name="MaterialComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
-                    <Button Click="AddMaterialButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+                    <Button Click="AddMaterialButton_Click" Grid.Column="1" Content="+" Width="20" Height="20"
+                            FontSize="10" />
                 </Grid>
 
                 <Label Content="Стеллаж:" />
