--- a/Modals/AddShelvingModal.xaml
+++ b/Modals/AddShelvingModal.xaml
@@ -3,15 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:MedicalFurnitureAccounting.Modals"
         mc:Ignorable="d"
         Title="AddShelvingModal" Height="300" Width="300">
     <StackPanel>
-        <Label Content="Добавление стеллажа" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Максимальный вес:" Margin="0 10 0 0"/>
-        <TextBox x:Name="MaxWeightTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" />
-        <Label Content="Ячейка:"/>
-        <ComboBox x:Name="CellComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
+        <Label Content="Добавление стеллажа" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
+        <Label Content="Максимальный вес:" Margin="0 10 0 0" />
+        <TextBox x:Name="MaxWeightTextBox" Style="{StaticResource TextBoxStyle}" Margin="10"
+                 PreviewTextInput="NumberTextBox_PreviewTextInput" />
+        <Label Content="Ячейка:" />
+        <ComboBox x:Name="CellComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
