--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -25,7 +25,7 @@
                 <ComboBox x:Name="productsFilterComboBox" Style="{StaticResource ComboBoxStyle}"
                           SelectionChanged="ProductsFilterComboBox_SelectionChanged" />
 
-                <TextBlock Text="{Binding TotalProductCount, StringFormat='Общее количество товаров: {0}'}" Margin="10"/>
+                <TextBlock Text="{Binding TotalProductCount, StringFormat='Общее количество товаров: {0}'}" Margin="10" />
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -88,12 +88,13 @@
             </ListView>
 
             <StackPanel>
-                <TextBlock Text="Поставки продукции" FontSize="20"/>
+                <TextBlock Text="Поставки продукции" FontSize="20" />
                 <ListView ItemsSource="{Binding Supplies}" Margin="10" Height="350" Width="1000">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Номер поставки" DisplayMemberBinding="{Binding SupplyId}" />
-                            <GridViewColumn Header="Дата поставки" DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" />
+                            <GridViewColumn Header="Дата поставки"
+                                            DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" />
                             <GridViewColumn Header="Продукты">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
@@ -160,8 +161,7 @@
                 <StackPanel Grid.Column="1">
                     <Button Content="Добавить материал" Click="AddMaterialButton_Click"
                             Style="{StaticResource ButtonStyle}"
-                            Height="40">
-                    </Button>
+                            Height="40" />
 
                     <ListView ItemsSource="{Binding Materials}" Margin="10" Height="300" Name="materialListView">
                         <ListView.View>
