--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -16,9 +16,11 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="30" />
+                <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="CategoryComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
             <Button Click="AddCategoryButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+            <Button Click="DeleteCategoryButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
         </Grid>
 
         <Label Content="Поставщик:" />
