--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -5,8 +5,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="AddSupplyModal" Height="500" Width="300">
-    <StackPanel>
+        Title="AddSupplyModal">
+    <StackPanel Margin="10">
         <Label Content="Добавление поставки" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
         <Label Content="Дата:" Margin="0 10 0 0" />
         <xctk:DateTimePicker x:Name="DatePicker" Margin="10" />
@@ -28,9 +28,11 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="30" />
+                <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="SupplierComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
             <Button Click="AddSupplierButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+            <Button Click="DeleteSupplierButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
         </Grid>
 
         <Label Content="Товар:" />
@@ -38,9 +40,11 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="30" />
+                <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="ProductComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
             <Button Click="AddProductButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+            <Button Click="DeleteProductButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
         </Grid>
 
         <Label Content="Количество:" />
