--- a/Modals/AddMaterialModal.xaml
+++ b/Modals/AddMaterialModal.xaml
@@ -4,8 +4,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="AddMaterialModal" Height="300" Width="300">
-    <StackPanel>
+        Title="AddMaterialModal">
+    <StackPanel Margin="10">
         <Label Content="Добавление материала" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
 
         <!-- Применение стиля к Label -->
