--- a/Modals/AddSupplierModal.xaml
+++ b/Modals/AddSupplierModal.xaml
@@ -4,8 +4,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="AddSupplierModal" Height="600" Width="300">
-    <StackPanel>
+        Title="AddSupplierModal">
+    <StackPanel Margin="10">
         <Label Content="Добавление поставщика" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
         <Label Content="Название:" Margin="0 10 0 0" />
         <TextBox x:Name="SupplierNameTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" />
