--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -17,18 +17,27 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="30" />
+                        <ColumnDefinition Width="30" />
                     </Grid.ColumnDefinitions>
                     <ComboBox x:Name="MaterialComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
-                    <Button Click="AddMaterialButton_Click" Grid.Column="1" Content="+" Width="20" Height="20"
-                            FontSize="10" />
+                    <Button Click="AddMaterialButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+                    <Button Click="DeleteProductButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
                 </Grid>
 
                 <Label Content="Стеллаж:" />
-                <ComboBox x:Name="ShelvingComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="30" />
+                        <ColumnDefinition Width="30" />
+                    </Grid.ColumnDefinitions>
+                    <ComboBox x:Name="ShelvingComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
+                    <Button Click="AddShelvingButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+                    <Button Click="DeleteShelvingButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
+                </Grid>
+
                 <Label Content="Количество:" Margin="0 10 0 0" />
                 <TextBox x:Name="ProductCountTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" />
-
-                <!-- New fields -->
                 <Label Content="Описание:" Margin="0 10 0 0" />
                 <TextBox x:Name="ProductDescriptionTextBox" Margin="10" />
                 <Label Content="Ширина:" Margin="0 10 0 0" />
