--- a/Modals/AddShelvingModal.xaml
+++ b/Modals/AddShelvingModal.xaml
@@ -10,8 +10,19 @@
         <Label Content="Максимальный вес:" Margin="0 10 0 0" />
         <TextBox x:Name="MaxWeightTextBox" Style="{StaticResource TextBoxStyle}" Margin="10"
                  PreviewTextInput="NumberTextBox_PreviewTextInput" />
+
         <Label Content="Ячейка:" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="30" />
+                <ColumnDefinition Width="30" />
+            </Grid.ColumnDefinitions>
         <ComboBox x:Name="CellComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
+        <Button Click="AddCellButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+        <Button Click="DeleteCellButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
+        </Grid>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
