--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,7 +26,7 @@
 
             <!-- Навигационное меню -->
             <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
-                <Button Content="Продукты" Margin="10" Foreground="White" Background="Transparent"
+                <Button Content="Склад" Margin="10" Foreground="White" Background="Transparent"
                         BorderBrush="Transparent" Click="Button_Click_Product_Page" />
                 <Button Content="Поставщики" Margin="10" Foreground="White" Background="Transparent"
                         BorderBrush="Transparent" Click="Button_Click_Supplier_Page" />
