fix: fix adding error

--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -12,6 +12,18 @@
                 <Label Content="Название:" Margin="0 10 0 0" />
                 <TextBox x:Name="ProductNameTextBox" Margin="10" />
 
+                <Label Content="Категория:" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="30" />
+                        <ColumnDefinition Width="30" />
+                    </Grid.ColumnDefinitions>
+                    <ComboBox x:Name="CategoryComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
+                    <Button Click="AddCategoryButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
+                    <Button Click="DeleteCategoryButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
+                </Grid>
+
                 <Label Content="Материал:" />
                 <Grid>
                     <Grid.ColumnDefinitions>
